Poniendo  el header responsive
Hice una media query, para el header,
tapando la  "ul" por completo, y dejando solo el "Logo"y el  "Botón"

Faltaría poner el menú hamburguesa.

--- a/style.css
+++ b/style.css
@@ -103,3 +103,10 @@ button:hover {
   background-color: var(--bg-button-hover);
   cursor: pointer;
 }
+
+@media (max-width:1095px){
+    .nav ul{
+        display: none;
+    }
+    
+}
