Segunda media query
La segunda media query consiste en quitar el boton al llegar a esos 'px 'especificos, y ademas poniendo el "Logo" en el centro de la pagina.

--- a/style.css
+++ b/style.css
@@ -110,3 +110,12 @@ button:hover {
     }
     
 }
+
+@media (max-width:532px){
+    .button{
+        display: none;
+    }
+    .logo{
+        margin: auto;
+    }
+}
