--- a/navbar.css
+++ b/navbar.css
@@ -43,11 +43,11 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  
+  gap: 20px;
 }
 
 /*MENU PRINCIPAL (nav) */
-header{
+header {
   width: 100%;
 }
 header nav {
@@ -57,7 +57,6 @@ header nav {
   align-items: center;
   position: absolute;
   padding: 2rem 9%;
-  
 }
 
 /*LOGO MENU PRINCIPAL */
@@ -127,57 +126,49 @@ nav .nav_toggle {
 
 /*SECTION TEXTO DEL HEADER*/
 
-
-.section-1{
-  padding: 0 9rem;
-}
-.section-1 .text{
-  padding: 5rem;
+.section-1 .text {
+  padding: 0 3rem;
   display: flex;
   flex-direction: column;
   gap: 30px;
   width: 100%;
-  min-width: 1000px;
-  
+  min-width: 30%;
+
 }
 
-.text h1{
+.text h1 {
   font-size: 90px;
   font-family: var(--font-letter-title-main);
   font-weight: 900;
   color: var(--color-original-enlace);
 }
-.text p, #first-child{
+.text p,
+#first-child {
   font-size: 18px;
   max-width: 60%;
-  color:var(--color-p-header) ;
+  color: var(--color-p-header);
   font-family: var(--font-letter-links);
   font-weight: 600;
-  
 }
-.section-1 .text #first-child{
+.section-1 .text #first-child {
   margin-top: -10px;
-  
 }
 
 /*BOTON 'explore more -> ' */
-.section-1  #btn{
-  padding: 13px  ;
+.section-1 #btn {
+  padding: 13px;
   border: none;
   border-radius: 5px;
   font-size: 22px;
-  background-color: #343A3F;
+  background-color: #343a3f;
   color: var(--color-original-enlace);
   font-weight: 600;
   cursor: pointer;
   transition: 0.3s;
-  box-shadow: 0 0 5px  var(--color-text-button);
-  
-  
-
+  box-shadow: 0 0 5px var(--color-text-button);
+  margin-top: 40px;
 }
-
-.text #btn:hover{
+.text #btn:hover {
   opacity: 0.8;
 }
 /*MQ*/
@@ -187,15 +178,37 @@ nav .nav_toggle {
   }
 }
 
-@media (max-width:1025px){
-  .section-1 .text{
-    padding: 0;
-    margin: 5rem auto;
-  }
-  .section-1 .text h1{
-    font-size: 80px;
+@media (max-width: 1025px) {
+  .section-1 .text h1 {
+    font-size: 70px;
   }
 }
+
+@media (max-width: 900px) {
+  .text h1 {
+    text-align:center;
+    font-size: 35px;
+    padding: 0;
+    width: 100%;
+    
+  }
+  .text p, #first-child {
+    text-align: center;
+    max-width: 100%;
+  }
+  .section-1 #btn{
+    font-size: 14px;
+  }
+}
+
+@media (max-width:818px){
+  .text h1{
+    font-size: 12pt;
+    max-width: 100%;
+    
+  }
+}
+
 @media (max-width: 768px) {
   nav .nav_items {
     position: absolute;
@@ -204,10 +217,12 @@ nav .nav_toggle {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: -webkit-fill-available;
-    /*height: 100vh;*/
+    /* height: -webkit-fill-available;*/
+    height: 100vh;
+
     transform: translateX(-100%);
     transition: 0.3s ease all;
+    background-color: rgba(0, 0, 0, 0.719);
   }
   nav .nav_items .links {
     display: flex;
@@ -272,9 +287,33 @@ nav .nav_toggle {
   .open {
     transform: translateX(0) !important;
   }
+
+  /*SECTION TEXT*/
+
+  .section-1 .text h1 {
+    font-size: 32px;
+  }
+
+  .section-1 .text p , #first-child{
+    font-size: 19px;
+    
+  }
 }
 
+@media (max-width:360px){
 
-/*MQ Para .section Text */
-
+  
+  .section-1 .text h1{
+    font-size: 18px;
+    
+  }
+  .section-1 #btn{
+    font-size: 10px;
+    padding: 10px;
+  }
+  .section-1 .text p, #first-child{
+    font-size: 14px;
+    
+  }
+}
 
